--- a/Fractalism/GPU/CMakeLists.txt
+++ b/Fractalism/GPU/CMakeLists.txt
@@ -2,7 +2,9 @@ target_sources (${PROJECT_NAME} PRIVATE
   GPU.cpp
   GPU.hpp
   GPUContext.cpp
-  GPUContext.hpp)
+  GPUContext.hpp
+  Types.cpp
+  Types.hpp)
 
 add_subdirectory ("OpenCL")
 add_subdirectory ("OpenGL")
