--- a/Fractalism/GPU/OpenCL/CMakeLists.txt
+++ b/Fractalism/GPU/OpenCL/CMakeLists.txt
@@ -1,9 +1,9 @@
 target_sources (${PROJECT_NAME} PRIVATE
-  CLIncludeHelper.hpp
-	CLSolver.cpp
-  CLSolver.hpp
-  CLTypes.cpp
-  CLTypes.hpp
+  CLCommon.hpp
   CLUtils.cpp
   CLUtils.hpp
+  KernelExecutor.cpp
+  KernelExecutor.hpp
+  ProgramManager.cpp
+  ProgramManager.hpp
   SVMPtr.hpp)
