--- a/Fractalism/UI/CMakeLists.txt
+++ b/Fractalism/UI/CMakeLists.txt
@@ -1,17 +1,12 @@
 target_sources(${PROJECT_NAME} PRIVATE
   GLRenderCanvas.cpp
   GLRenderCanvas.hpp
-  IDs.hpp
   MenuBar.cpp
   MenuBar.hpp
-  NumberInput.cpp
-  NumberInput.hpp
-  RenderPanel.cpp
-  RenderPanel.hpp
   UI.cpp
   UI.hpp
-  ViewMappingSelector.cpp
-  ViewMappingSelector.hpp
   ViewWindow.cpp
   ViewWindow.hpp
-  WxIncludeHelper.hpp)
+  UICommon.hpp)
+
+add_subdirectory("Controls")
