--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Visual Studio Code workspace storage
+.vscode/
+
+# CMake - CMake build system
+CMakeCache.txt
+CMakeFiles/
